samples/_failures_safe/1761628636_e30012_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c374edbc.c: In function ‘main’:
./samples/SAFE/__tmp_c374edbc.c:166:24: error: missing terminating ' character
  166 |         input[len-1] = '\0
      |                        ^~~
./samples/SAFE/__tmp_c374edbc.c:166:9: error: expected expression at end of input
  166 |         input[len-1] = '\0
      |         ^~~~~
./samples/SAFE/__tmp_c374edbc.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c374edbc.c:166:9: error: expected declaration or statement at end of input
